2017-08-31  Stephen Jenkins  <stephenearljenkins@gmail.com>

	* init-git.el: 2017 08 30 deleted a few packages & documented the rest

2017-08-30  Stephen Jenkins  <stephenearljenkins@gmail.com>

	* removed init-folding.el as not used in any workflow

	* init-flycheck.el: ;; 2017 08 29 map to sej-mode-hook

	* init-elfeed.el (elfeed): disabled for now until better use case

	* init-deft.el:  change bindings to sej-mode-map & add H-d

	* init-company.el:  change binding to sej-map

2017-08-29  Stephen Jenkins  <stephenearljenkins@gmail.com>

	* init-bindings-settings.el: play around with adding my own minor mode for keymapping

2017-08-28  Stephen Jenkins  <stephenearljenkins@gmail.com>

	* init-lisp.el: added some paredit, eldoc, & ielm settings from EOS

	* init-flycheck.el: add some flycheck settings & helm-flycheck

	* init-misc-pkgs.el (google-this): added super-g for google
	(smartscan): added smartscan M-n M-p when over point to search word
	(dtrt-indent): added for proper indenting with other people's files
	(highlight-numbers): special highlighting of numbers

2017-06-12  Stephen Jenkins  <stephenearljenkins@gmail.com>

	* init-misc-pkgs.el (mode-icons): add mode-icons

	* init-git.el: add font-awesome git icon

2017-06-05  Stephen Jenkins  <stephenearljenkins@gmail.com>

	* move mu4e.el to archive

2017-06-01  Stephen Jenkins  <stephenearljenkins@gmail.com>

	* init-misc-pkgs.el (crontab-mode): bring simple modes together; prepare to separate in own file & eliminate batch, yaml, etc

2017-05-10  Stephen Jenkins  <stephenearljenkins@gmail.com>

        * init-misc-pkgs.el: add bookmark+
        add rpn-calc


2017-05-09  Stephen Jenkins  <stephenearljenkins@gmail.com>

        * init-bindings-settings.el:  rename file to init-bindings-settings.el

        * init-look-and-feel.el: add keybindings from emacs-starter-kit