@@ -3,16 +3,19 @@
 ;; 2017 01 05 init SeJ
 ;; 2017 01 06 change from req-package to use-package
 ;; 2017 04 04 remove ensure went global ; defer not required for mode,bind,int
-
+;; 2017 08 30 map to sej-mode-map & setq golden-ratio-auto-scale
 ;;; Code:
 
 (use-package golden-ratio
-  ;;:demand t
-  :defer 2
+  :ensure t
+  :defer t
+  :defines sej-mode-map
   :diminish golden-ratio-mode
-  :bind ("M-'" . next-multiframe-window)
+  :bind (:map sej-mode-map
+	      ("M-'" . next-multiframe-window))
   :config
   (golden-ratio-mode 1)
+  (setq golden-ratio-auto-scale t)
   (add-to-list 'golden-ratio-extra-commands 'next-multiframe-window))
 
 (provide 'init-golden-ratio)
